# IMS-Project

./: .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  incidents.py  rca.py  signals.py
backend/app/core/: buffer.py  debounce.py  metrics.py  rate_limiter.py  worker.py
backend/app/db/: mongo.py  postgres.py  redis.py
backend/app/db/models/: work_item.py
backend/app/schemas/: __init__.py
backend/app/workflow/: rca_validator.py  state_machine.py
backend/app/workflow/alerting/: base.py
backend/ims_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_all.py
docs/prompts/: design_decisions.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx
frontend/src/components/LiveFeed/: index.tsx
frontend/src/components/RCAForm/: index.tsx
frontend/src/pages/: Dashboard.tsx  IncidentPage.tsx
frontend/src/types/: index.ts
scripts/: load_test.py  seed_failure_event.py
