[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-backend"
version = "1.0.0"
description = "Incident Management System Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    # Database - PostgreSQL
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    # Database - MongoDB
    "motor==3.6.0",
    # Database - Redis
    "redis[hiredis]==5.1.1",
    # Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    # Retry logic
    "tenacity==9.0.0",
    # Utilities
    "python-dateutil==2.9.0",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
